openshift/11-mongo.yaml
# 11-mongo.yaml — MongoDB pour event, registration, ticket, feedback
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels: { app: mongodb }
spec:
  replicas: 1
  selector: { matchLabels: { app: mongodb } }
  template:
    metadata:
      labels: { app: mongodb }
    spec:
      containers:
      - name: mongo
        image: quay.io/mongodb/mongodb-community-server:6.0-ubi8
        ports: [{ containerPort: 27017 }]
        volumeMounts:
        - name: data
          mountPath: /data/db
        readinessProbe:
          tcpSocket: { port: 27017 }
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket: { port: 27017 }
          initialDelaySeconds: 40
          periodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim: { claimName: mongo-pvc }
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector: { app: mongodb }
  ports:
  - port: 27017
    targetPort: 27017
